--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
 language: csharp
 solution: myComplier.sln
+sudo apt-key adv --recv-key --keyserver keyserver.ubuntu.com FE85409EEAB40ECCB65740816AF0E1940624A220
