--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: csharp
 solution: myComplier.sln
-sudo: false
+install:
+  - sudo apt-get install -y gtk-sharp2
+  - nuget restore solution-name.sln
