--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: csharp
 solution: myComplier.sln
 install:
+- sudo apt-get install mono-devel mono-gmcs nunit-console
 - nuget restore myComplier.sln
+script:
+- xbuild myComplier.sln
 
