--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
 sudo: false
 script:
-- xbuild /p:Configuration=Release myComplier.sln
+- xbuild /p:Configuration=Debug myComplier.sln
 
